--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -52,6 +52,20 @@ jobs:
             bin: ./bin/godot.windows.template_release.x86_64.console.exe
             compiler: gcc
 
+          - name: Editor w/ Mono (target=editor)
+            cache-name: windows-editor-mono
+            target: editor
+            sconsflags: module_mono_enabled=yes debug_symbols=no vsproj=yes vsproj_gen_only=no windows_subsystem=console
+            bin: ./bin/godot.windows.editor.x86_64.mono.exe
+            build-mono: true
+            tests: false # Disabled due freeze caused by mix Mono build and CI
+            doc-test: true
+            proj-conv: true
+            api-compat: true
+            artifact: true
+            compiler: msvc
+            cache-limit: 2
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,6 +80,10 @@ jobs:
 
       - name: Setup Python and SCons
         uses: ./.github/actions/godot-deps
+
+      - name: Install Mono
+        run: |
+          choco install mono -y
 
       - name: Download Direct3D 12 SDK components
         run: python ./misc/scripts/install_d3d12_sdk_windows.py
@@ -99,6 +117,14 @@ jobs:
           platform: windows
           target: ${{ matrix.target }}
           tests: ${{ matrix.tests }}
+
+      - name: Generate Glue Code
+        if: ${{ matrix.cache-name == 'windows-editor-mono' }}
+        run: ./bin/godot.windows.editor.x86_64.mono.exe --headless --generate-mono-glue modules/mono/glue
+
+      - name: Build GodotSharp
+        if: ${{ matrix.cache-name == 'windows-editor-mono' }}
+        run: python modules/mono/build_scripts/build_assemblies.py --godot-output-dir=./bin
 
       - name: Save Godot build cache
         uses: ./.github/actions/godot-cache-save
